--- a/wiki/SkinDesignersGuide.wiki
+++ b/wiki/SkinDesignersGuide.wiki
@@ -13,7 +13,20 @@ If you are new to skinning, please check out the [http://www.team-mediaportal.co
 <wiki:toc max_depth="3" />
 
 = Skinner's Change Log =
-== v3.0 (Not Released, v1.2 Beta only) ==
+== v3.1.0 ==
+ * Now that there is a MPEI Extension installer you can also check if an update is available using a Skin Button e.g.
+{{{
+<control>
+  <description>MPEIUPDATE:5e2777c3_966c_407f_b5a9_e51205b70b3e</description>
+  <type>button</type>
+  <id>99000</id>
+  <label>#MPEI.Translation.UpdateAvailable.Label</label>
+  <visible>string.equals(#mpei.5e2777c3_966c_407f_b5a9_e51205b70b3e.haveupdate, true)</visible>
+</control>
+}}}
+ * Extension GUID is: *5e2777c3_966c_407f_b5a9_e51205b70b3e*
+
+== v3.0 ==
  * Added Coverflow support, to enable skin support from skin you need to add the coverflow facade control and also enable it in TVSeries.SkinSettings.xml:
 {{{
 <layouts>
