--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -314,5 +314,6 @@
   <string Field="MainMenu" Original="Main Menu">Main Menu</string>
   <string Field="AddToWatchList" Original="Add {0} to Watchlist">Add {0} to Watchlist</string>
   <string Field="TraktNotLoggedIn" Original="You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?">You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?</string>
-
+  <string Field="RelatedSeries" Original="RelatedSeries">Related Series</string>
+  
 </strings>
