--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -315,5 +315,7 @@
   <string Field="AddToWatchList" Original="Add {0} to Watchlist">Add {0} to Watchlist</string>
   <string Field="TraktNotLoggedIn" Original="You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?">You can not do this operation without being\nlogged in. Would you like to Signup or Login\nto trakt.tv now?</string>
   <string Field="RelatedSeries" Original="RelatedSeries">Related Series</string>
+
+  <string Field="SearchTorrent" Original="Torrent Search">Torrent Search</string>
   
 </strings>
