--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -318,5 +318,6 @@
 
   <string Field="SearchTorrent" Original="Torrent Search">Torrent Search</string>
   <string Field="SearchNZB" Original="NZB Search">NZB Search</string>
+  <string Field="SearchActorInMovies" Original="Search for Actor in Movies">Search for Actor in Movies</string>
   
 </strings>
