--- a/MP-TVSeries/Resources/Languages/en(us).xml
+++ b/MP-TVSeries/Resources/Languages/en(us).xml
@@ -319,5 +319,7 @@
   <string Field="SearchTorrent" Original="Torrent Search">Torrent Search</string>
   <string Field="SearchNZB" Original="NZB Search">NZB Search</string>
   <string Field="SearchActorInMovies" Original="Search for Actor in Movies">Search for Actor in Movies</string>
+
+  <string Field="AddToCustomList" Original="Add {0} to Custom List...">Add {0} to Custom List...</string>
   
 </strings>
