Issue #308: Added global filter for 'Unwatched Episodes'.

--- a/MP-TVSeries/Resources/Languages/en-US.xml
+++ b/MP-TVSeries/Resources/Languages/en-US.xml
@@ -339,4 +339,7 @@
   <string Field="Warning" Original="Warning">Warning</string>
   <string Field="PlaybackOutOfOrderLine1" Original="The next unwatched episode is:">The next unwatched episode is:</string>
   <string Field="PlaybackOutOfOrderLine2" Original="Are you sure you want to continue?">Are you sure you want to continue?</string>
+  <string Field="Filters" Original="Filters">Filters</string>
+  <string Field="UnwatchedEpisodes" Original="Unwatched Episodes">UnWatched Episodes</string>
+  <string Field="AllEpisodes" Original="All Episodes">All Episodes</string>
 </strings>
