Issue #595: Improved the OutOfOrder playback check, will now only check in the current season, it will detect gaps in collection when not enabling 'download all episode info'.

--- a/MP-TVSeries/Resources/Languages/en-US.xml
+++ b/MP-TVSeries/Resources/Languages/en-US.xml
@@ -337,7 +337,7 @@
   <string Field="LayoutCoverflow" Original="Coverflow">Coverflow</string>
 
   <string Field="Warning" Original="Warning">Warning</string>
-  <string Field="PlaybackOutOfOrderLine1" Original="The next unwatched episode is:">The next unwatched episode is:</string>
+  <string Field="PlaybackOutOfOrderLine1" Original="The next unwatched episode is:">You have not yet watched/collected</string>
   <string Field="PlaybackOutOfOrderLine2" Original="Are you sure you want to continue?">Are you sure you want to continue?</string>
   <string Field="Filters" Original="Filters">Filters</string>
   <string Field="UnwatchedEpisodes" Original="Unwatched Episodes">UnWatched Episodes</string>
